--- a/smileapp/src/components/jokecard/jokeCard.css
+++ b/smileapp/src/components/jokecard/jokeCard.css
@@ -4,9 +4,9 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: white;
     border-radius: 2vw;
- 
     width: 43%;
     height: 22vw;
+    position: relative;
 }
 
 h1{
@@ -17,4 +17,19 @@ h1{
 }
 p{
     padding-left: 1vw;
+}
+
+.likes{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: absolute;
+    top: 80%;
+    left: 85%;
+}
+
+.button-heart{
+    background-color: white;
+    border: 0px;
+   
 }
